[v4_1_esv] Various minor documentation improvements:
remove repeated words

fix: it's to its

some minor formatting added
	(this needs to be improved still, there is a mix
	of \fB Bold and \fI underline for same things)

spelling fixes

minor punctuation fixes (remove ...)

uppercase an acronym that is not a config item

(I didn't get this reviewed, these all are very minor or obvious.)

There was a conflict in common/dhcp-options.5, I added some extra
options to fix it.

--- a/common/dhcp-eval.5
+++ b/common/dhcp-eval.5
@@ -306,7 +306,7 @@ the data expression is reversed in place, using hunks of the size
 specified in the numeric expression.  For example, if the numeric
 expression evaluates to four, and the data expression evaluates to
 twelve bytes of data, then the reverse expression will evaluate to
-twelve bytes of data, consisting of the last four bytes of the the
+twelve bytes of data, consisting of the last four bytes of the
 input data, followed by the middle four bytes, followed by the first
 four bytes.
 .RE
