--- a/relay/dhcrelay.8
+++ b/relay/dhcrelay.8
@@ -1,6 +1,6 @@
 .\"	dhcrelay.8
 .\"
-.\" Copyright (c) 2009-2012 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2009-2013 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 2004,2007 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1997-2003 by Internet Software Consortium
 .\"
@@ -102,6 +102,10 @@ dhcrelay - Dynamic Host Configuration Protocol Relay Agent
 ]
 [
 .B --no-pid
+]
+[
+.B -s
+.I subscriber-id
 ]
 .B -l
 .I lower0
@@ -222,6 +226,11 @@ automatically sent when there are two or more downstream interfaces
 in use, to disambiguate between them.  The \fB-I\fR option causes
 dhcrelay to send the option even if there is only one downstream
 interface.
+.TP
+-s subscriber-id
+Add an option with the specified subscriber-id into the packet.  This
+feature is for testing rather than production as it will put the same
+subscriber-id into the packet for all clients.
 .TP
 -l [\fIaddress%\fR]\fIifname\fR[\fI#index\fR]
 Specifies the ``lower'' network interface for DHCPv6 relay mode: the
